2013-02-13  Filip Pizlo  <fpizlo@apple.com>

        ForwardInt32ToDouble is not in DFG::MinifiedNode's list of relevant node types
        https://bugs.webkit.org/show_bug.cgi?id=109726

        Reviewed by Gavin Barraclough.
        
        This is asymptomatic because ForwardInt32ToDouble is only used in SetLocals, in
        which case the value is already stored to the stack.  Still, we should fix this.

        * dfg/DFGMinifiedNode.h:
        (JSC::DFG::belongsInMinifiedGraph):

2013-02-12  Filip Pizlo  <fpizlo@apple.com>

        DFG LogicalNot/Branch peephole removal and inversion ignores the possibility of things exiting
        https://bugs.webkit.org/show_bug.cgi?id=109489

        Reviewed by Mark Hahnenberg.
        
        If things can exit between the LogicalNot and the Branch then don't peephole.

        * dfg/DFGFixupPhase.cpp:
        (JSC::DFG::FixupPhase::fixupNode):

2013-02-13  Oliver Hunt  <oliver@apple.com>

        Remove unnecessary indirection to non-local variable access operations
        https://bugs.webkit.org/show_bug.cgi?id=109724

        Reviewed by Filip Pizlo.

        Linked bytecode now stores a direct pointer to the resolve operation
        vectors, so the interpreter no longer needs a bunch of indirection to
        to perform non-local lookup.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::CodeBlock):
        * bytecode/CodeBlock.h:
        (CodeBlock):
        * bytecode/Instruction.h:
        * dfg/DFGByteCodeParser.cpp:
        (ByteCodeParser):
        (InlineStackEntry):
        (JSC::DFG::ByteCodeParser::parseResolveOperations):
        (JSC::DFG::ByteCodeParser::parseBlock):
        (JSC::DFG::ByteCodeParser::InlineStackEntry::InlineStackEntry):
        * dfg/DFGCapabilities.h:
        (JSC::DFG::canInlineOpcode):
        * dfg/DFGGraph.h:
        (ResolveGlobalData):
        (ResolveOperationData):
        (PutToBaseOperationData):
        * dfg/DFGSpeculativeJIT.h: